# tinkerer

./: .env.example  .flake8  .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: live-model-matrix-smoke.yml
mcp-servers/hf-datasets/: server.py
mcp-servers/tinker_mcp/: __init__.py  __main__.py  errors.py  models.py  server.py  state.py  utils.py
mcp-servers/tinker_mcp/training/: __init__.py  common.py  grpo.py  sft.py
modal/: agent_prompt_template.md  claude_settings.json  codex_config.toml  run_tinkerer.py  sandbox_agent_instructions.md
prompts/: arithmetic_quick_win.txt  general_template.txt  gsm8k_fast_8b.txt  math_aime.txt  math_gsm8k.txt  mbpp.txt  mbpp_fast_8b.txt  sft_norobots_8b.txt
scripts/: __init__.py  checkpoint_compare.py  live_model_matrix_smoke.py
tests/: test_common_validators.py  test_fixes.py  test_grpo_datum_guards.py  test_grpo_debug_controls.py  test_grpo_lr_scheduling.py  test_grpo_reward_validation.py  test_grpo_root_cause_analysis.py  test_json_loading.py  test_live_smoke_matrix_config.py  test_mcp_json_config.py  test_modal_runner_env.py  test_runtime_contracts.py  test_save_load_tools.py  test_session_lock.py  test_wandb_error_policy.py  test_wandb_init_helper.py
